--- a/_config.yml
+++ b/_config.yml
@@ -20,5 +20,5 @@ sass:
     :style: compressed
     :cache: false
 timezone: America/New_York
-exclude: ['README.md', 'LICENSE', 'vendor/', 'node_src', '*.map', '.gitignore', 'Gemfile*', '*.gemspec', '_sass']
+exclude: ['README.md', 'LICENSE', 'vendor/', 'node_src', '*.map', '.gitignore', 'Gemfile*', '*.gemspec', '_sass', '.idea', '.sass-cache/']
 
